fixed syntax error in de.json

--- a/src/content/translations/de.json
+++ b/src/content/translations/de.json
@@ -20,7 +20,7 @@
     "homeParagraph1": "Mit der Nutzung von <b>Fast&nbsp;Border&nbsp;Crossing</b> helfen Sie aktiv bei der Sicherstellung eines freien, europaweiten Waren- und Güterverkehrs bei gleichzeitiger Eindämmung der Corona-Pandemie mit.",
     "notFound": "Die angeforderte Seite wurde nicht gefunden",
     "solutionTitle": "Unsere Lösung",
-    "solutionParagraph1": "fastbordercrossing.org schafft eine EU-weite Plattform, über welche die bisher analog über einen Fragebogen erfassten Informationen digital und vor Fahrtantritt eingeben werden können. Die Informationen für eine komplette Fahrt - vom Startland, über Transitländer bis hin zum Zielland - werden zentral in einer Datenbank erfasst und können von Grenzbeamten per QR-Code aufgerufen und kontrolliert werden. Neben den Informationen zum Fahrer, Fahrzeug und Fahrt, können zudem gesundheitsrelevante Daten erfasst werden."
+    "solutionParagraph1": "fastbordercrossing.org schafft eine EU-weite Plattform, über welche die bisher analog über einen Fragebogen erfassten Informationen digital und vor Fahrtantritt eingeben werden können. Die Informationen für eine komplette Fahrt - vom Startland, über Transitländer bis hin zum Zielland - werden zentral in einer Datenbank erfasst und können von Grenzbeamten per QR-Code aufgerufen und kontrolliert werden. Neben den Informationen zum Fahrer, Fahrzeug und Fahrt, können zudem gesundheitsrelevante Daten erfasst werden.",
     "driverAppTitle": "Fahrer App",
     "checkpointAppTitle": "Checkpoint App",
     "teamTitle": "Team",
