language html support fix

--- a/src/content/translations/en.json
+++ b/src/content/translations/en.json
@@ -1,14 +1,14 @@
 {
     "aboutTitle": "About Us",
     "aboutParagraph1": "When we met during the <i>#wirvsvirus</i> Hackathon, we were all strangers. Together we approached the following Challenge, proposed by the German government:",
-    "aboutParagraph2": "During the Corona-Crisis we face tightened border controls and up to 60 kilometers worth o traffic jams in the European Union. These circumstances lead to long waiting periods at the border and disruptions in supply chains for food and mediacl products. How can traffic jams be avoided or reduced?",
+    "aboutParagraph2": "During the Corona-Crisis we face tightened border controls and up to 60 kilometers worth of traffic jams in the European Union. These circumstances lead to long waiting periods at the border and disruptions in supply chains for food and medical products. How can traffic jams be avoided or reduced?",
     "aboutParagraph3": "Our prototype for industrial freight transport <b>Fast Border Crossing</b>, was rated Top20 of 1500 submissions during the German <i>#wirvsvirus</i> Hackathon. This rating motivates us to further develop <b>Fast Border Crossing</b>.",
     "architectureTitle": "Architecture",
     "architectureParagraph1": "Our Architecture is elaborated and enables important features:",
     "architectureLi1": "Efficient and hygenic border controls",
     "architectureLi2": "Trackable and interruptable chains of infection",
     "architectureLi3": "Platform independent and extendable functionality",
-    "architectureLi4": "Scalable an pan-European approach",
+    "architectureLi4": "Scalable and pan-European approach",
     "architectureLi5": "Data processing and analysis",
     "contactTitle": "Contact",
     "contactGeneralTitle": "General inquiries",
