--- a/src/content/translations/en.json
+++ b/src/content/translations/en.json
@@ -1,30 +1,30 @@
 {
     "aboutTitle": "About Us",
-    "aboutParagraph1": "When we met during the <i>#wirvsvirus</i> Hackathon, we were all strangers. Together we approached the following Challenge, proposed by the German government:",
-    "aboutParagraph2": "During the Corona-Crisis we face tightened border controls and up to 60 kilometers worth o traffic jams in the European Union. These circumstances lead to long waiting periods at the border and disruptions in supply chains for food and mediacl products. How can traffic jams be avoided or reduced?",
+    "aboutParagraph1": "When we met during the <i>#wirvsvirus</i> Hackathon, we did not know each other. Together we approached the following challenge, proposed by the German government:",
+    "aboutParagraph2": "During the Corona-Crisis we face tightened border controls and up to 60 kilometers worth of traffic jams in the European Union. These circumstances lead to long waiting periods at the border and disruptions in supply chains for food and mediacl products. How can traffic jams be avoided or reduced?",
     "aboutParagraph3": "Our prototype for industrial freight transport <b>Fast Border Crossing</b>, was rated Top20 of 1500 submissions during the German <i>#wirvsvirus</i> Hackathon. This rating motivates us to further develop <b>Fast Border Crossing</b>.",
     "architectureTitle": "Architecture",
     "architectureParagraph1": "Our Architecture is elaborated and enables important features:",
     "architectureLi1": "Efficient and hygenic border controls",
     "architectureLi2": "Trackable and interruptable chains of infection",
     "architectureLi3": "Platform independent and extendable functionality",
-    "architectureLi4": "Scalable an pan-European approach",
+    "architectureLi4": "Scalable and pan-European approach",
     "architectureLi5": "Data processing and analysis",
     "contactTitle": "Contact",
     "contactGeneralTitle": "General inquiries",
     "contactPressTitle": "Press",
     "contactGeneralParagraph1": "You can reach out to us via E-Mail. Please send your inquiries to the email address below",
     "contactPressParagraph1": "You can reach out to us via E-Mail. Please send your press related inquiries to the email address below",
-    "contactPressParagraph2": "Please be aware that we can not respond to press unrelated subjects on this channel. Please use the general email address",
+    "contactPressParagraph2": "Please be aware that we can not respond to press unrelated subjects on this channel. Please use the info email address for general information.",
     "homeTitle": "Reduction of traffic jams for industrial freight transport",
-    "homeParagraph1": "by using <b>Fast Border Crossing</b> you help strengthening the free, european-wide transport of goods and the containment of the Corona pandemic.",
+    "homeParagraph1": "By using <b>Fast Border Crossing</b> you help strengthening the free, european-wide transport of goods and the containment of the Corona pandemic.",
     "notFound": "The requested page was not found",
     "solutionTitle": "Our Solution",
     "solutionParagraph1": "Paper forms are currently used on arrival at european borders to collect necessary information regarding the Corona-Crisis. <b>fastbordercrossing.org</b> creates an EU wide Platform for drivers and border officials to digitally exchange information that are necessary for border crossing - fast. Information about the trip - including start countries, transit countries and destination countries - are provided before departure, saved in a central database and can be reviewed by officials at the border via QR-Code. Necessary information can be configured individually for every european border and may include health-related checks.",
     "driverAppTitle": "Driver Application",
     "checkpointAppTitle": "Checkpoint Application",
     "teamTitle": "Team",
-    "teamParagraph1": "We stand behind FastBorderCrossing",
+    "teamParagraph1": "We are behind FastBorderCrossing",
     "infoEmail": "info@fastbordercrossing.org",
     "pressEmail": "press@fastbordercrossing.org",
     "applicationTitle": "Applications"
