implemented french and spanish

--- a/src/content/translations/es.json
+++ b/src/content/translations/es.json
@@ -1,4 +1,31 @@
 {
-    "translation1": "Traducción 1",
-    "translation2": "Traducción 2"
+    "aboutTitle": "Quiénes somos",
+    "aboutParagraph1": "Nuestro equipo fue fundado durante el hackathon alemán <i>#wirvsvirus</i>. Todos los miembros del equipo nunca se habían visto antes! Juntos abordamos el siquiente desafío, planteado por el gobierno y la policía federal de Alemania.",
+    "aboutParagraph2": "Desde la crisis de la corona ha habido largos atascos de camiones de hasta 60km en las fronteras. Eso lleva a largos tiempos de espera, lo que lleva a interrupciones en importantes cadenas de suministro, como alimentos y productos médicos importantes. ¿Cómo puede evitar o al menos acortar los atascos en las fronteras?",
+    "aboutParagraph3": "Nuestro prototipo, que desarrollamos en el hackathon y está dirigido al transporte comercial de mercancías, se encuentra entre las 20 mejores soluciones de 1500 en el hackathon alemán <i>#wirvsvirus</i>. Este premio nos refuerza y ​​nos motiva a seguir desarrollando <b>Fast&nbsp;Border&nbsp;Crossing</b>.",
+    "architectureTitle": "Arquitectura",
+    "architectureParagraph1": "Con nuestra arquitectura y el entorno de la aplicación, hay ventajas para todos los involucrados.",
+    "architectureLi1": "Controles fronterizos eficientes e higiénicos",
+    "architectureLi2": "Trazabilidad de las cadenas de infección y posibilidad de interrupción.",
+    "architectureLi3": "Independencia de plataforma y capacidad de expansión",
+    "architectureLi4": "Solución escalable y enfoque holístico europeo",
+    "architectureLi5": "Procesamiento posterior de los datos y opciones de análisis.",
+    "contactTitle": "Contacto",
+    "contactGeneralTitle": "General",
+    "contactPressTitle": "Prensa",
+    "contactGeneralParagraph1": "Puedes contactarnos por email. Por favor envíe sus consultas a la dirección de email subsecuente.",
+    "contactPressParagraph1": "Puedes contactarnos por email. Por favor envíe sus consultas a la dirección de email subsecuente.",
+    "contactPressParagraph2": "Por favor, comprenda que otras consultas a través de este canal no pueden ser respondidas. Para cualquier otra consulta, utilice la dirección de email general.",
+    "homeTitle": "Reducción de atascos en el tráfico fronterizo comercial",
+    "homeParagraph1": "Con el uso de XYZ, usted apoya activamente la seguridad de un movimiento gratuito de bienes en toda Europa y, al mismo tiempo, contiene la pandemia de la corona.",
+    "notFound": "No se encontró la página solicitada.",
+    "solutionTitle": "Nuestra solucion",
+    "solutionParagraph1": "fastbordercrossing.org XYZ crea una plataforma en toda la UE a través de la cual la información previamente registrada en un cuestionario puede ingresarse digitalmente y antes de comenzar el viaje. La información para un viaje completo, desde el país de inicio, a través de los países de tránsito hasta el país de destino, se registra centralmente en una base de datos y los funcionarios fronterizos pueden llamarla y verificarla utilizando un código QR. Además de la información sobre el conductor, el vehículo y el viaje, también se pueden registrar datos relacionados con la salud.",
+    "driverAppTitle": "Driver App",
+    "checkpointAppTitle": "Checkpoint App",
+    "teamTitle": "Equipe",
+    "teamParagraph1": "Estamos detras de FastBorderCrossing",
+    "infoEmail": "info@fastbordercrossing.org",
+    "pressEmail": "press@fastbordercrossing.org",
+    "applicationTitle": "Aplicaciones"
 }
