--- a/src/content/translations/fr.json
+++ b/src/content/translations/fr.json
@@ -1,4 +1,31 @@
 {
-    "translation1": "Traduction 1",
-    "translation2": "Traduction 2"
+    "aboutTitle": "Qui sommes nous",
+    "aboutParagraph1": "Notre équipe s’est constitué au cours du hackathon <i>#WirvsVirus</i>. Tous les membres de l’équipe ne se connaissaient pas auparavant! Ensemble nous avons voulu relever le défi suivant proposé par le gouvernement fédéral allemand et plus pariculièrement la police fédérale qui en relève.",
+    "aboutParagraph2": "Depuis le début de la crise liée au virus CoVid-19/corona, il y a une intensification des contrôles frontaliers, entrainant ainsi des embouteillages pouvant atteindre jusqu’à 60 km. Cela provoque de longs délais d'attente, ce qui entraîne des interruptions dans d'importantes chaînes d'approvisionnement comme par exemple pour la nourriture et les produits médicaux importants. Comment éviter ou au moins raccourcir les embouteillages aux niveau des postes frontaliers?",
+    "aboutParagraph3": "Le prototype que nous avons développé lors du hackathon <b>Fast&nbsp;Border&nbsp;Crossing</b>, qui se concentre sur le transport commercial de marchandises, a été primé au top 20 des 1500 solutions soumisent lors du hackathon allemand  <i> #wirvsvirus </i>. Ce prix/cette reconnaissance nous encourage et nous motive à poursuivre le développement de notre solution FastBorderCrossing.",
+    "architectureTitle": "Architecture",
+    "architectureParagraph1": "Avec l'architecture que nous avons choisie et le paysage d'application qui en résulte, les avantages suivants en découlent pour toutes les parties prenantes:",
+    "architectureLi1": "Des contrôles frontaliers efficaces et hygiéniques",
+    "architectureLi2": "Traçabilité des chaînes d'infection et ainsi possibilité d'agir pour les interrompres",
+    "architectureLi3": "Indépendance et évolutivité de la plateforme",
+    "architectureLi4": "Solution évolutive et approche globale et européenne",
+    "architectureLi5": "Traitement ultérieur des données et options d‘analyse",
+    "contactTitle": "Contact",
+    "contactGeneralTitle": "Information générales ",
+    "contactPressTitle": "Presse",
+    "contactGeneralParagraph1": "Vous pouvez nous contacter par e-mail. Pour ce faire, veuillez, s’il-vous-plait envoyer vos demandes à l'adresse e-mail ci-dessous",
+    "contactPressParagraph1": "Vous pouvez nous contacter par e-mail. Pour ce faire, veuillez, s’il-vous-plait envoyer vos demandes à l'adresse e-mail ci-dessous",
+    "contactPressParagraph2": "Veuillez comprendre qu'il est impossible de répondre aux autres demandes par le biais de ce courriel. Pour toutes les autres demandes, veuillez utiliser notre adresse e-mail générique pour les informations",
+    "homeTitle": "Réduction des embouteillages dans le trafic (commercial) frontalier",
+    "homeParagraph1": "En utilisant Fastbordercrossing,  vous contribuez activement à assurer la libre circulation à l'échelle européenne des marchandises et des biens tout en maîtrisant la pandémie liée au virus CoVid-19.",
+    "notFound": "La page demandée est introuvable",
+    "solutionTitle": "Notre solution",
+    "solutionParagraph1": "fastbordercrossing.org crée une plate-forme à l'échelle de l'UE au travers de laquelle les informations précédemment enregistrées dans un questionnaire peuvent être saisies numériquement et ceci avant le début du déplacement. Les informations pour un déplacement complet - du pays de départ, via les pays de transit jusqu'au pays de destination - sont enregistrées de manière centralisée dans une base de données et peuvent être téléchargées et vérifiées par les agents des frontières à l'aide d'un QR code. En plus des informations sur le conducteur, le véhicule et le trajet, des données liées à la santé des passager peuvent également être enregistrées.",
+    "driverAppTitle": "Driver App",
+    "checkpointAppTitle": "Checkpoint App",
+    "teamTitle": "Team",
+    "teamParagraph1": "Nous sommes derrière FastBorderCrossing",
+    "infoEmail": "info@fastbordercrossing.org",
+    "pressEmail": "press@fastbordercrossing.org",
+    "applicationTitle": "Les applications"
 }
