--- a/src/content/translations/es.json
+++ b/src/content/translations/es.json
@@ -17,10 +17,10 @@
     "contactPressParagraph1": "Puedes contactarnos por email. Por favor envíe sus consultas a la dirección de email subsecuente.",
     "contactPressParagraph2": "Por favor, comprenda que otras consultas a través de este canal no pueden ser respondidas. Para cualquier otra consulta, utilice la dirección de email general.",
     "homeTitle": "Reducción de atascos en el tráfico fronterizo comercial",
-    "homeParagraph1": "Con el uso de XYZ, usted apoya activamente la seguridad de un movimiento gratuito de bienes en toda Europa y, al mismo tiempo, contiene la pandemia de la corona.",
+    "homeParagraph1": "Con el uso de <b>Fast Border Crossing</b>, usted apoya activamente la seguridad de un movimiento gratuito de bienes en toda Europa y, al mismo tiempo, contiene la pandemia de la corona.",
     "notFound": "No se encontró la página solicitada.",
     "solutionTitle": "Nuestra solucion",
-    "solutionParagraph1": "fastbordercrossing.org XYZ crea una plataforma en toda la UE a través de la cual la información previamente registrada en un cuestionario puede ingresarse digitalmente y antes de comenzar el viaje. La información para un viaje completo, desde el país de inicio, a través de los países de tránsito hasta el país de destino, se registra centralmente en una base de datos y los funcionarios fronterizos pueden llamarla y verificarla utilizando un código QR. Además de la información sobre el conductor, el vehículo y el viaje, también se pueden registrar datos relacionados con la salud.",
+    "solutionParagraph1": "fastbordercrossing.org crea una plataforma en toda la UE a través de la cual la información previamente registrada en un cuestionario puede ingresarse digitalmente y antes de comenzar el viaje. La información para un viaje completo, desde el país de inicio, a través de los países de tránsito hasta el país de destino, se registra centralmente en una base de datos y los funcionarios fronterizos pueden llamarla y verificarla utilizando un código QR. Además de la información sobre el conductor, el vehículo y el viaje, también se pueden registrar datos relacionados con la salud.",
     "driverAppTitle": "Driver App",
     "checkpointAppTitle": "Checkpoint App",
     "teamTitle": "Equipe",
