--- a/src/content/translations/de.json
+++ b/src/content/translations/de.json
@@ -16,15 +16,31 @@
     "contactGeneralParagraph1": "Sie können mit uns per Email in Kontakt treten. Bitte senden Sie Ihre Anfragen an untenstehende Email-Adresse",
     "contactPressParagraph1": "Sie können mit uns per Email in Kontakt treten. Bitte senden Sie Ihre Presse-Anfragen an untenstehende Email-Adresse",
     "contactPressParagraph2": "Haben Sie bitte Verständnis dafür, dass anderweitige Anfrage über diesen Kanal nicht beantwortet werden können. Für alle anderen Anfragen verwenden Sie bitte allgemeine Email-Addresse.",
-    "homeTitle": "Stau-Reduzierung im gewerblichen Grenzverkehr",
-    "homeParagraph1": "Mit der Nutzung von <b>Fast&nbsp;Border&nbsp;Crossing</b> helfen Sie aktiv bei der Sicherstellung eines freien, europaweiten Waren- und Güterverkehrs bei gleichzeitiger Eindämmung der Corona-Pandemie mit.",
+    "homeTitle": "Optimierung von Grenzkontrollen mit Fast Border Crossing",
+    "homeParagraph1": "Digitalisierung der Grenzkontrollen an den Binnengrenzen Europas",
+    "homeBoxTitle1": "Digitale Grenzkontrollen schnell und einfach",
+    "homeBox1": "Durch die kontaktlose Übermittlung aller relevanten Daten mittels QR-Code, erfolgt die Grenzkontrolle schnell, einfach und hygienisch.",
+    "homeBoxTitle2": "Skalierbare Anwendungsarchitektur",
+    "homeBox2": "Dank dem Einsatz modernster Technologien kann eine schnelle Skalierbarkeit bei veränderten Rahmenbedingungen sicher gewährleistet werden.",
+    "homeBoxTitle3": "#wirvsvirus-Top 20 von über 1.500 Projekten",
+    "homeBox3": "Beim #wirvsvirus - Hackathon der Bundesregierung wurden wir von unabhängigen Expertinnen und Experten in die Top 20 von über 1.500 Projekten gewählt.",
     "notFound": "Die angeforderte Seite wurde nicht gefunden",
     "solutionTitle": "Unsere Lösung",
-    "solutionParagraph1": "fastbordercrossing.org schafft eine EU-weite Plattform, über welche die bisher analog über einen Fragebogen erfassten Informationen digital und vor Fahrtantritt eingegeben werden können. Die Informationen für eine komplette Fahrt - vom Startland, über Transitländer bis hin zum Zielland - werden zentral in einer Datenbank erfasst und können von Grenzbeamten per QR-Code aufgerufen und kontrolliert werden. Neben Informationen zu Fahrer, Fahrzeug und Fahrt, können zudem gesundheitsrelevante Daten erfasst werden.",
+    "solutionSubtitle": "Kurz erklärt",
+    "solutionParagraph1": "FastBorderCrossing zielt darauf ab, den Verkehr zwischen Grenzübergängen in Europa zu optimieren und Staus zu reduzieren oder aufzuheben.",
+    "solutionStepTitle1": "Dateneingabe vom Fahrer",
+    "solutionStepText1": "Der Fahrer gibt bereits vor der Grenzkontrolle wichtige Daten in die Fahrer-App ein. <br /><br /> Hierzu gehören insbesondere Informationen zu:",
+    "solutionStepTitle2": "Fahrer erhält einen QR-Code",
+    "solutionStepText2": "Nach erfolgreicher Speicherung seiner Daten erhält der Fahrer einen QR-Code, der seine Tour repräsentiert. Der QR-Code kann als Bild oder PDF heruntergeladen werden.",
+    "solutionStepTitle3": "Grenzkontrolle",
+    "solutionStepText3": "Bei der Grenzkontrolle kann der Fahrer dem Grenzbeamten nun einfach den QR-Code vorzeigen. Der Grenzbeamte scannt den QR-Code in der Checkpoint-App und erhält alle benötigten Informationen auf einen Blick.",
+    "solutionStepTitle4": "Weiterfahrt",
+    "solutionStepText4": "Dank Fast Border Crossing ist die Grenzkontrolle schnell und einfach durchgeführt. Das Infektionsrisiko wird minimiert und der Enstehung von langen Staus wird entgegengewirkt.",
+    "solutionTitle2": "Unsere Lösung",
     "driverAppTitle": "Fahrer App",
     "checkpointAppTitle": "Checkpoint App",
-    "teamTitle": "Team",
-    "teamParagraph1": "Wir stehen hinter FastBorderCrossing",
+    "teamTitle": "Über uns",
+    "teamParagraph1": "Wir sind ein freies Team bestehend aus einigen Produktmanagern, Designern und Entwicklern. Zusammen haben wir beim #wirvsvirus-Hackathon das Projekt Fast Border Crossing konzeptioniert und entwickelt.",
     "infoEmail": "info@fastbordercrossing.org",
     "pressEmail": "press@fastbordercrossing.org",
     "applicationTitle": "Anwendungen"
